Upgrade to Dropwizard 3.